--- a/accueil.html
+++ b/accueil.html
@@ -95,7 +95,7 @@
     <!-- End of Silex HEAD tag do not remove --></head>
 
 <body data-silex-id="body-initial" class="body-initial is-not-active all-style enable-mobile silex-runtime" data-silex-type="container">
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1496137851436-2 section-element show-when-active" data-silex-id="silex-id-1496137851436-2">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1496137851436-2 section-element show-when-active hide-on-mobile" data-silex-id="silex-id-1496137851436-2">
         <div data-silex-type="container" class="editable-style silex-id-1496137851435-1 container-element silex-element-content silex-container-content website-width prevent-draggable" data-silex-id="silex-id-1496137851435-1">
 
 
@@ -120,7 +120,7 @@
             <div data-silex-type="image" class="editable-style silex-id-1496162110372-8 image-element close-btn" data-silex-id="silex-id-1496162110372-8" style=""><img src="../../../../../libs/templates/silex-templates/creative/assets/hamburger2-close-white.png" class="silex-element-content"></div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1478366444112-1 section-element show-when-not-active" data-silex-id="silex-id-1478366444112-1" style="">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1478366444112-1 section-element show-when-not-active hide-on-desktop" data-silex-id="silex-id-1478366444112-1" style="">
         <div data-silex-type="container" class="editable-style silex-element-content silex-id-1478366444112-0 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1478366444112-0"><div data-silex-type="image" class="editable-style silex-id-1496137172968-2 image-element" data-silex-id="silex-id-1496137172968-2" data-silex-href="#!page-home-page"><img src="../../../../../libs/templates/silex-templates/creative/assets/logo.png" class="silex-element-content"></div><div data-silex-type="container" class="editable-style silex-id-1545060115782-18 container-element hide-on-desktop" data-silex-id="silex-id-1545060115782-18" style=""></div>
 
 
