--- a/accueil.html
+++ b/accueil.html
@@ -193,9 +193,7 @@
                 </div>
             </div><div data-silex-type="text" class="editable-style silex-id-1496136970330-0 text-element header" data-silex-id="silex-id-1496136970330-0" style="">
                 <div class="silex-element-content normal">
-                    <h1>Welcome to Creative Peter's home</h1>
-                    
-                        <p>
+                    <h1>Bienvenue sur notre nouveau site</h1><p>
                             Ground round ham hock ut leberkas salami. Frankfurter cow lorem laboris reprehenderit flank pork belly ut capicola beef shankle bacon labore in. Bresaola fugiat leberkas, doner strip steak anim reprehenderit id sirloin.&nbsp;
                         </p>
                     
